--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,17 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+     <!-- Font Awesome -->
+    <link 
+     rel="stylesheet" 
+     href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      />
+
+     <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
